<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/ThemeOverlay.AppCompat.Light">

    <group android:checkableBehavior="single"
        android:id="@+id/group_1">

        <item
            android:id="@+id/my_music_item"
            android:checked="false"
           android:icon="@drawable/ic_library_music_white_36dp"
            android:title="@string/my_music" />

        <item
            android:id="@+id/friends_item"
            android:checked="false"
            android:icon="@drawable/ic_person_white_36dp"
            android:title="@string/friends" />

        <item
            android:id="@+id/groups_item"
            android:checked="false"
            android:icon="@drawable/ic_group_white_36dp"
            android:title="@string/groups" />


        <item
            android:id="@+id/loaded_item"
            android:checked="false"
            android:icon="@drawable/ic_save_white_36dp"
            android:title="@string/loaded_songs" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group_2">

        <item
            android:id="@+id/search_item"
            android:checked="false"
            android:icon="@drawable/ic_search_white_36dp"
            android:title="@string/search" />
    </group>
</menu>